fix bug: Sidebar-width too small in some cases

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -44,6 +44,7 @@
 }
 
 .app .scroll {
+  flex-shrink: 0;
   overflow-y: auto;
 }
 
